--- a/frontend/src/app/pages/admin-dodaj-studiski/admin-dodaj-studiski.component.html
+++ b/frontend/src/app/pages/admin-dodaj-studiski/admin-dodaj-studiski.component.html
@@ -1,62 +1,71 @@
-<div class="max-w-xl mx-auto p-6 bg-white shadow-md rounded-xl space-y-6">
-  <h2 class="text-2xl font-bold text-gray-800">
-    {{ id ? 'Izmeni Studijski Program' : 'Dodaj Studijski Program' }}
-  </h2>
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-start relative pt-20"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini -->
+  <div class="absolute top-8 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-40 h-40 opacity-25 drop-shadow-2xl">
+  </div>
 
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="space-y-4">
-    <div>
-      <label class="block text-sm font-medium text-gray-700">Naziv</label>
-      <input
-        type="text"
-        formControlName="naziv"
-        class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-        required
-      />
-    </div>
+  <div class="max-w-xl mx-auto p-6 bg-white shadow-md rounded-xl space-y-6 mt-25">
+    <h2 class="text-2xl font-bold text-gray-800">
+      {{ id ? 'Izmeni Studijski Program' : 'Dodaj Studijski Program' }}
+    </h2>
 
-    <div>
-      <label class="block text-sm font-medium text-gray-700">Opis</label>
-      <textarea
-        rows="3"
-        formControlName="opis"
-        class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-      ></textarea>
-    </div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="space-y-4">
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Naziv</label>
+        <input
+          type="text"
+          formControlName="naziv"
+          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+          required
+        />
+      </div>
 
-    <div>
-      <label class="block text-sm font-medium text-gray-700">Rukovodilac</label>
-      <select
-        formControlName="rukovodioc"
-        class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-      >
-        <option value="">-- Izaberi nastavnika --</option>
-        <option *ngFor="let n of nastavnici" [value]="n.id">
-          {{ n.ime }} {{ n.prezime }}
-        </option>
-      </select>
-    </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Opis</label>
+        <textarea
+          rows="3"
+          formControlName="opis"
+          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+        ></textarea>
+      </div>
 
-    <div>
-      <label class="block text-sm font-medium text-gray-700">Fakultet</label>
-      <select
-        formControlName="fakultet_id"
-        class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-      >
-        <option value="">-- Izaberi fakultet --</option>
-        <option *ngFor="let f of fakulteti" [value]="f.id">
-          {{ f.opis}}
-        </option>
-      </select>
-    </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Rukovodilac</label>
+        <select
+          formControlName="rukovodioc"
+          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+        >
+          <option value="">-- Izaberi nastavnika --</option>
+          <option *ngFor="let n of nastavnici" [value]="n.id">
+            {{ n.ime }} {{ n.prezime }}
+          </option>
+        </select>
+      </div>
 
-    <div>
-      <button
-        type="submit"
-        class="w-full py-2 px-4 bg-indigo-600 text-white font-semibold rounded-md shadow hover:bg-indigo-700"
-      >
-        {{ id ? 'Izmeni Program' : 'Dodaj Program' }}
-      </button>
-    </div>
-  </form>
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Fakultet</label>
+        <select
+          formControlName="fakultet_id"
+          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+        >
+          <option value="">-- Izaberi fakultet --</option>
+          <option *ngFor="let f of fakulteti" [value]="f.id">
+            {{ f.opis}}
+          </option>
+        </select>
+      </div>
+
+      <div>
+        <button
+          type="submit"
+          class="w-full py-2 px-4 bg-indigo-600 text-white font-semibold rounded-md shadow hover:bg-indigo-700"
+        >
+          {{ id ? 'Izmeni Program' : 'Dodaj Program' }}
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
-
