--- a/frontend/src/app/pages/admin-sifarnik/admin-sifarnik.component.html
+++ b/frontend/src/app/pages/admin-sifarnik/admin-sifarnik.component.html
@@ -1,4 +1,12 @@
-<div class="p-6 max-w-4xl mx-auto bg-white shadow-md rounded-lg space-y-6">
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-start relative pt-40"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb iznad tabele -->
+  <div class="absolute top-12 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-44 h-auto opacity-40 drop-shadow-2xl">
+  </div>
+<div class="p-6 max-w-4xl mx-auto bg-white shadow-md rounded-lg space-y-6 mt-15">
   <h2 class="text-2xl font-semibold text-gray-800">Admin - Sifarnik</h2>
 
   <div class="flex flex-col sm:flex-row items-center gap-4">
