--- a/frontend/src/app/pages/nastavnik/silabus/silabus.component.html
+++ b/frontend/src/app/pages/nastavnik/silabus/silabus.component.html
@@ -1,7 +1,16 @@
-<div class="container" *ngIf="silabus">
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini, iznad forme -->
+  <div class="absolute top-16 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+  </div>
+
+<div class="relative z-10 w-full max-w-md p-6 mt-60 bg-white/100 border border-white/50 rounded-2xl shadow-xl backdrop-blur-md" *ngIf="silabus">
   <h2>Silabus</h2>
 
-  <div *ngIf="!uredi">
+  <div *ngIf="!uredi" >
     <p>Naziv: {{ silabus.sadrzaj }}</p>
     
    
@@ -9,7 +18,7 @@
   </div>
 
   <div *ngIf="uredi">
-    <textarea [(ngModel)]="noviSadrzaj" rows="10" cols="80"></textarea><br>
+    <textarea [(ngModel)]="noviSadrzaj" rows="10" cols="80" class="border border-gray-500"></textarea><br>
     <button (click)="sacuvajIzmene()">Sačuvaj</button>
     <button (click)="uredi = false">Otkaži</button>
   </div>
