--- a/frontend/src/app/pages/nastavnik/studenti-predmeta/studenti-predmeta.component.html
+++ b/frontend/src/app/pages/nastavnik/studenti-predmeta/studenti-predmeta.component.html
@@ -1,4 +1,13 @@
-<div class="container">
+<div 
+  class="min-h-screen bg-cover bg-center bg-fixed flex flex-col items-center justify-center relative"
+  style="background-image: url('pozadina.jpg');"
+>
+  <!-- Grb u pozadini, iznad forme -->
+  <div class="absolute top-16 flex justify-center w-full pointer-events-none">
+    <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
+  </div>
+
+<div class="container bg-transparent border-transparent">
   <h2>Studenti na predmetu ID: {{ predmetId }}</h2>
 
   <ul *ngIf="studenti.length > 0; else nemaStudenata">
