--- a/frontend/src/app/pages/univerzitet/univerzitet.component.html
+++ b/frontend/src/app/pages/univerzitet/univerzitet.component.html
@@ -6,7 +6,7 @@
   <div class="absolute top-16 flex justify-center w-full pointer-events-none">
     <img src="slika1.png" alt="Grb" class="w-48 h-auto opacity-30 drop-shadow-2xl">
   </div>
-<div class="max-w-4xl mx-auto my-10 p-4">
+<div class="max-w-4xl mx-auto my-10 p-4 mt-25">
   
 
   <div *ngIf="univerziteti.length > 0; else noData" class="space-y-4">
@@ -14,7 +14,9 @@
       *ngFor="let uni of univerziteti"
       (click)="router.navigate(['/prikazi-univerzitet', uni.id])"
       class="bg-white p-4 rounded shadow hover:shadow-lg hover:bg-blue-50 cursor-pointer transition"
+     
     >
+     
       <p class="text-xl font-semibold text-blue-700">{{ uni.naziv }}</p>
       <div *ngIf="authService.hasRole('ROLE_ADMIN')" class="flex gap-4 mt-4">
         <button
